# 8086_disassembler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/test_files/: rm2reg.asm
src/: dis86_disassembler.cpp  dis86_inst_format.cpp  dis86_instruction.cpp  dis86_instruction.h  dis86_instruction_stream.cpp  dis86_instruction_stream.h  dis86_instuction_stream.cpp  dis86_num_types.h  dis86_operand.cpp  dis86_operand.h
tests/: CMakeLists.txt  test_mov.cpp
tests/asm/: acc2mem  acc2mem.asm  add  add.asm  all_supported  all_supported.asm  imm2rm  imm2rm.asm  push_pop  push_pop.asm  rm2reg  rm2reg.asm  shift.asm  xchg_in_out  xchg_in_out.asm  xlat_lea_lds_les  xlat_lea_lds_les.asm
